[scm] fix alignment of file-icons
Fixes: #7034
When theme of "File Icon(Theia) " is selected, there is a offset in the icon and the text, removed one css property to align everything.

--- a/packages/scm/src/browser/style/index.css
+++ b/packages/scm/src/browser/style/index.css
@@ -198,10 +198,6 @@
     color: var(--theia-list-inactiveSelectionForeground);
 }
 
-.theia-scm .scmItem .file-icon {
-    display: initial;
-}
-
 .theia-scm .scmItem .path {
     font-size: var(--theia-ui-font-size0);
     margin-left: var(--theia-ui-padding);
@@ -215,6 +211,7 @@
     padding-bottom: 2px;
     font-size: var(--theia-ui-font-size0);
 }
+
 .scm-change-count {
     float: right;
 }
